--- a/index.html
+++ b/index.html
@@ -5,12 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/styles/index.css" />
-    <title>Vite App</title>
+    <title>Vite + Pixi.js Boilerplate</title>
   </head>
   <body>
-    <header>
-      <h1>Hello World</h1>
-    </header>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
